syntax/ggy.output
Grammar

    0 $accept: graph $end

    1 graph: things

    2 things: thing
    3       | things thing
    4       | things TSEMI thing

    5 thing: link
    6      | list
    7      | equationlist

    8 link: TLP from linksep to TRP
    9     | TLP from linksep to TCOMMA edgelabel TRP

   10 $@1: %empty

   11 link: from TDOTARROW $@1 to

   12 $@2: %empty

   13 link: from TDOTREVARROW $@2 to

   14 $@3: %empty

   15 link: from TDOTBOTHARROW $@3 to

   16 $@4: %empty

   17 link: from TDOTNOARROW $@4 to
   18     | from TARROW to

   19 $@5: %empty

   20 link: from TREVARROW $@5 to

   21 $@6: %empty

   22 link: from TBOTHARROW $@6 to

   23 $@7: %empty

   24 link: from TNOARROW $@7 to
   25     | from TDASH to
   26     | from TCOLON to
   27     | from TCOMMA to

   28 linksep: TCOMMA
   29        | TARROW
   30        | TDASH
   31        | TCOLON
   32        | TREVARROW
   33        | TBOTHARROW
   34        | TNOARROW
   35        | TDOTARROW
   36        | TDOTREVARROW
   37        | TDOTBOTHARROW
   38        | TDOTNOARROW

   39 $@8: %empty

   40 from: TID $@8 attributes

   41 $@9: %empty

   42 from: TINT $@9 attributes

   43 $@10: %empty

   44 to: TID $@10 attributes

   45 $@11: %empty

   46 to: TINT $@11 attributes

   47 edgelabel: TID
   48          | TINT
   49          | TSTRING

   50 attributes: %empty
   51           | TBANG
   52           | TBANG TBANG

   53 $@12: %empty

   54 list: TID $@12 TLSB stufflist TRSB

   55 $@13: %empty

   56 list: TINT $@13 TLSB stufflist TRSB

   57 stufflist: %empty
   58          | stuff

   59 stuff: stuffing
   60      | stuff TSEMI stuffing
   61      | stuff TCOMMA stuffing

   62 stuffing: lhs rhs

   63 lhsid: TID

   64 lhs: lhsid TEQUAL
   65    | TEQUAL

   66 rhs: rhs0
   67    | %empty

   68 rhs0: rhs10
   69     | rhs0 TBARBAR rhs10

   70 rhs10: rhs20
   71      | rhs10 TAMPAMP rhs20

   72 rhs20: rhs30
   73      | rhs20 TBAR rhs30

   74 rhs30: rhs40
   75      | rhs30 TUPARROW rhs40

   76 rhs40: rhs50
   77      | rhs40 TAMP rhs50

   78 rhs50: rhs60
   79      | rhs50 TEQUALEQUAL rhs60
   80      | rhs50 TNOTEQUAL rhs60

   81 rhs60: rhs70
   82      | rhs60 TGREATEREQUAL rhs70
   83      | rhs60 TGREATER rhs70
   84      | rhs60 TLESSEQUAL rhs70
   85      | rhs60 TLESS rhs70

   86 rhs70: rhs80
   87      | rhs70 TLEFTSHIFT rhs80
   88      | rhs70 TRIGHTSHIFT rhs80

   89 rhs80: rhs90
   90      | rhs80 TPLUS rhs90
   91      | rhs80 TDASH rhs90

   92 rhs90: rhs100
   93      | rhs90 TSTAR rhs100
   94      | rhs90 TMOD rhs100
   95      | rhs90 TSLASH rhs100

   96 rhs100: rhs110
   97       | TBANG rhs110
   98       | TTILDE rhs110
   99       | TPLUS rhs110
  100       | TDASH rhs110
  101       | TSTAR rhs110

  102 rhs110: TID
  103       | TINT
  104       | TLP rhs0 TRP

  105 atom: equationid
  106     | equationid TDOT TIN
  107     | equationid TDOT TOUT
  108     | TALL TPRED atom
  109     | TANY TPRED atom
  110     | TALL TPRED TEDGE atom
  111     | TANY TPRED TEDGE atom
  112     | TPRED TNODE atom
  113     | TALL TSUCC atom
  114     | TANY TSUCC atom
  115     | TALL TSUCC TEDGE atom
  116     | TANY TSUCC TEDGE atom
  117     | TSUCC TNODE atom
  118     | TLP expression TRP

  119 factor: atom
  120       | TBANG atom

  121 term: factor
  122     | term TSTAR factor

  123 expression: term
  124           | expression TPLUS term

  125 equationlist: TLCB eqlist TRCB

  126 eqlist: equation
  127       | eqlist TSEMI equation

  128 $@14: %empty

  129 $@15: %empty

  130 equation: equationid $@14 inout nodeexpr direction $@15 initial TEQUAL expression

  131 equationid: TID

  132 nodeexpr: TNODE
  133         | TEDGE
  134         | %empty

  135 inout: TDOT TIN
  136      | TDOT TOUT
  137      | %empty

  138 initial: %empty
  139        | TLSB value TRSB
  140        | TLSB value TCOMMA value TRSB

  141 value: %empty
  142      | TINT

  143 direction: TPLUS
  144          | TDASH
  145          | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
TID (258) 40 44 47 54 63 102 131
TSTRING (259) 49
TARROW (260) 18 29
TREVARROW (261) 20 32
TBOTHARROW (262) 22 33
TNOARROW (263) 24 34
TDOTARROW (264) 11 35
TDOTREVARROW (265) 13 36
TDOTBOTHARROW (266) 15 37
TDOTNOARROW (267) 17 38
TBARBAR (268) 69
TAMPAMP (269) 71
TBAR (270) 73
TUPARROW (271) 75
TAMP (272) 77
TEQUALEQUAL (273) 79
TNOTEQUAL (274) 80
TGREATEREQUAL (275) 82
TGREATER (276) 83
TLESSEQUAL (277) 84
TLESS (278) 85
TLEFTSHIFT (279) 87
TRIGHTSHIFT (280) 88
TPLUS (281) 90 99 124 143
TDASH (282) 25 30 91 100 144
TSTAR (283) 93 101 122
TSLASH (284) 95
TMOD (285) 94
TBANG (286) 51 52 97 120
TTILDE (287) 98
TCOLON (288) 26 31
TCOMMA (289) 9 27 28 61 140
TEQUAL (290) 64 65 130
TLP (291) 8 9 104 118
TRP (292) 8 9 104 118
TSEMI (293) 4 60 127
TDOT (294) 106 107 135 136
TLSB (295) 54 56 139 140
TRSB (296) 54 56 139 140
TLCB (297) 125
TRCB (298) 125
TALL (299) 108 110 113 115
TANY (300) 109 111 114 116
TPRED (301) 108 109 110 111 112
TSUCC (302) 113 114 115 116 117
TINT (303) 42 46 48 56 103 142
TIN (304) 106 135
TOUT (305) 107 136
TNODE (306) 112 117 132
TEDGE (307) 110 111 115 116 133


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
graph (54)
    on left: 1, on right: 0
things (55)
    on left: 2 3 4, on right: 1 3 4
thing (56)
    on left: 5 6 7, on right: 2 3 4
link (57)
    on left: 8 9 11 13 15 17 18 20 22 24 25 26 27, on right: 5
$@1 (58)
    on left: 10, on right: 11
$@2 (59)
    on left: 12, on right: 13
$@3 (60)
    on left: 14, on right: 15
$@4 (61)
    on left: 16, on right: 17
$@5 (62)
    on left: 19, on right: 20
$@6 (63)
    on left: 21, on right: 22
$@7 (64)
    on left: 23, on right: 24
linksep (65)
    on left: 28 29 30 31 32 33 34 35 36 37 38, on right: 8 9
from (66)
    on left: 40 42, on right: 8 9 11 13 15 17 18 20 22 24 25 26 27
$@8 (67)
    on left: 39, on right: 40
$@9 (68)
    on left: 41, on right: 42
to (69)
    on left: 44 46, on right: 8 9 11 13 15 17 18 20 22 24 25 26 27
$@10 (70)
    on left: 43, on right: 44
$@11 (71)
    on left: 45, on right: 46
edgelabel (72)
    on left: 47 48 49, on right: 9
attributes (73)
    on left: 50 51 52, on right: 40 42 44 46
list (74)
    on left: 54 56, on right: 6
$@12 (75)
    on left: 53, on right: 54
$@13 (76)
    on left: 55, on right: 56
stufflist (77)
    on left: 57 58, on right: 54 56
stuff (78)
    on left: 59 60 61, on right: 58 60 61
stuffing (79)
    on left: 62, on right: 59 60 61
lhsid <var> (80)
    on left: 63, on right: 64
lhs <var> (81)
    on left: 64 65, on right: 62
rhs <exp> (82)
    on left: 66 67, on right: 62
rhs0 <exp> (83)
    on left: 68 69, on right: 66 69 104
rhs10 <exp> (84)
    on left: 70 71, on right: 68 69 71
rhs20 <exp> (85)
    on left: 72 73, on right: 70 71 73
rhs30 <exp> (86)
    on left: 74 75, on right: 72 73 75
rhs40 <exp> (87)
    on left: 76 77, on right: 74 75 77
rhs50 <exp> (88)
    on left: 78 79 80, on right: 76 77 79 80
rhs60 <exp> (89)
    on left: 81 82 83 84 85, on right: 78 79 80 82 83 84 85
rhs70 <exp> (90)
    on left: 86 87 88, on right: 81 82 83 84 85 87 88
rhs80 <exp> (91)
    on left: 89 90 91, on right: 86 87 88 90 91
rhs90 <exp> (92)
    on left: 92 93 94 95, on right: 89 90 91 93 94 95
rhs100 <exp> (93)
    on left: 96 97 98 99 100 101, on right: 92 93 94 95
rhs110 <exp> (94)
    on left: 102 103 104, on right: 96 97 98 99 100 101
atom <dfexp> (95)
    on left: 105 106 107 108 109 110 111 112 113 114 115 116 117 118,
    on right: 108 109 110 111 112 113 114 115 116 117 119 120
factor <dfexp> (96)
    on left: 119 120, on right: 121 122
term <dfexp> (97)
    on left: 121 122, on right: 122 123 124
expression <dfexp> (98)
    on left: 123 124, on right: 118 124 130
equationlist (99)
    on left: 125, on right: 7
eqlist (100)
    on left: 126 127, on right: 125 127
equation (101)
    on left: 130, on right: 126 127
$@14 (102)
    on left: 128, on right: 130
$@15 (103)
    on left: 129, on right: 130
equationid <df> (104)
    on left: 131, on right: 105 106 107 130
nodeexpr <Intval> (105)
    on left: 132 133 134, on right: 130
inout <Intval> (106)
    on left: 135 136 137, on right: 130
initial (107)
    on left: 138 139 140, on right: 130
value <Intval> (108)
    on left: 141 142, on right: 139 140
direction <Intval> (109)
    on left: 143 144 145, on right: 130


State 0

    0 $accept: . graph $end

    TID   shift, and go to state 1
    TLP   shift, and go to state 2
    TLCB  shift, and go to state 3
    TINT  shift, and go to state 4

    graph         go to state 5
    things        go to state 6
    thing         go to state 7
    link          go to state 8
    from          go to state 9
    list          go to state 10
    equationlist  go to state 11


State 1

   40 from: TID . $@8 attributes
   54 list: TID . $@12 TLSB stufflist TRSB

    TLSB      reduce using rule 53 ($@12)
    $default  reduce using rule 39 ($@8)

    $@8   go to state 12
    $@12  go to state 13


State 2

    8 link: TLP . from linksep to TRP
    9     | TLP . from linksep to TCOMMA edgelabel TRP

    TID   shift, and go to state 14
    TINT  shift, and go to state 15

    from  go to state 16


State 3

  125 equationlist: TLCB . eqlist TRCB

    TID  shift, and go to state 17

    eqlist      go to state 18
    equation    go to state 19
    equationid  go to state 20


State 4

   42 from: TINT . $@9 attributes
   56 list: TINT . $@13 TLSB stufflist TRSB

    TLSB      reduce using rule 55 ($@13)
    $default  reduce using rule 41 ($@9)

    $@9   go to state 21
    $@13  go to state 22


State 5

    0 $accept: graph . $end

    $end  shift, and go to state 23


State 6

    1 graph: things .
    3 things: things . thing
    4       | things . TSEMI thing

    TID    shift, and go to state 1
    TLP    shift, and go to state 2
    TSEMI  shift, and go to state 24
    TLCB   shift, and go to state 3
    TINT   shift, and go to state 4

    $default  reduce using rule 1 (graph)

    thing         go to state 25
    link          go to state 8
    from          go to state 9
    list          go to state 10
    equationlist  go to state 11


State 7

    2 things: thing .

    $default  reduce using rule 2 (things)


State 8

    5 thing: link .

    $default  reduce using rule 5 (thing)


State 9

   11 link: from . TDOTARROW $@1 to
   13     | from . TDOTREVARROW $@2 to
   15     | from . TDOTBOTHARROW $@3 to
   17     | from . TDOTNOARROW $@4 to
   18     | from . TARROW to
   20     | from . TREVARROW $@5 to
   22     | from . TBOTHARROW $@6 to
   24     | from . TNOARROW $@7 to
   25     | from . TDASH to
   26     | from . TCOLON to
   27     | from . TCOMMA to

    TARROW         shift, and go to state 26
    TREVARROW      shift, and go to state 27
    TBOTHARROW     shift, and go to state 28
    TNOARROW       shift, and go to state 29
    TDOTARROW      shift, and go to state 30
    TDOTREVARROW   shift, and go to state 31
    TDOTBOTHARROW  shift, and go to state 32
    TDOTNOARROW    shift, and go to state 33
    TDASH          shift, and go to state 34
    TCOLON         shift, and go to state 35
    TCOMMA         shift, and go to state 36


State 10

    6 thing: list .

    $default  reduce using rule 6 (thing)


State 11

    7 thing: equationlist .

    $default  reduce using rule 7 (thing)


State 12

   40 from: TID $@8 . attributes

    TBANG  shift, and go to state 37

    $default  reduce using rule 50 (attributes)

    attributes  go to state 38


State 13

   54 list: TID $@12 . TLSB stufflist TRSB

    TLSB  shift, and go to state 39


State 14

   40 from: TID . $@8 attributes

    $default  reduce using rule 39 ($@8)

    $@8  go to state 12


State 15

   42 from: TINT . $@9 attributes

    $default  reduce using rule 41 ($@9)

    $@9  go to state 21


State 16

    8 link: TLP from . linksep to TRP
    9     | TLP from . linksep to TCOMMA edgelabel TRP

    TARROW         shift, and go to state 40
    TREVARROW      shift, and go to state 41
    TBOTHARROW     shift, and go to state 42
    TNOARROW       shift, and go to state 43
    TDOTARROW      shift, and go to state 44
    TDOTREVARROW   shift, and go to state 45
    TDOTBOTHARROW  shift, and go to state 46
    TDOTNOARROW    shift, and go to state 47
    TDASH          shift, and go to state 48
    TCOLON         shift, and go to state 49
    TCOMMA         shift, and go to state 50

    linksep  go to state 51


State 17

  131 equationid: TID .

    $default  reduce using rule 131 (equationid)


State 18

  125 equationlist: TLCB eqlist . TRCB
  127 eqlist: eqlist . TSEMI equation

    TSEMI  shift, and go to state 52
    TRCB   shift, and go to state 53


State 19

  126 eqlist: equation .

    $default  reduce using rule 126 (eqlist)


State 20

  130 equation: equationid . $@14 inout nodeexpr direction $@15 initial TEQUAL expression

    $default  reduce using rule 128 ($@14)

    $@14  go to state 54


State 21
